# cancellations-sop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  app.py  docker-compose.yml  env.example  pyproject.toml  requirements-streamlit.txt  requirements.txt  run.sh  setup.sh  streamlit_app.py
.github/workflows/: ci.yml  release.yml
src/app/: __init__.py  __main__.py  config.py  main.py  utils.py
tests/: __init__.py  conftest.py  test_main.py
